[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
limine = "0.2.0"
x86_64 = "0.15.1"
raw-cpuid = "11.0.1"
spinning_top = "0.3.0"
acpi = { version = "5.0.0", default-features = false }

[build-dependencies]
fontdue = "0.8.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"