[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
limine = "0.2.0"
x86_64 = "0.15.1"
raw-cpuid = "11.0.1"
spinning_top = "0.3.0"
acpi = { version = "5.0.0", default-features = false }
xmas-elf = "0.9.1"

[build-dependencies]
fontdue = "0.9.2"

[profile.release]
lto = "fat"
codegen-units = 1
